--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
     <link rel="shortcut icon" href="misc/logo.png" type="image/x-icon">  
@@ -32,7 +32,7 @@
             </a>
           </li>
           <li class="list">
-            <a href="#" class="nav-link link-dark ">
+            <a href="webpages/about.html" class="nav-link link-dark ">
               <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"/></svg>
               ABOUT
             </a>
@@ -72,7 +72,10 @@
           </ul> -->
         </div>
       </div>
-        
+        <div id="content">
+          <img src="misc/wall.jpg" alt="wall" id="bg">
+          
+        </div>
     <script src="js/main.js"></script>
     <!-- <script src="bootstrap/js/bootstrap.bundle.js"></script> -->
 </body>
